# bits

./: .ccls  README.org  meson.build
.github/workflows/: main.yml
include/: bitmatrix.hh
tests/: meson.build  test_bitmatrix.cc
